--- a/README/README.html
+++ b/README/README.html
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#109;&#x61;&#x69;&#108;&#116;&#x6f;&#x3a;&#x73;&#117;&#x70;&#x70;&#x6f;r&#116;&#64;&#x76;&#x69;&#x76;&#97;&#x72;&#97;&#100;&#x6f;.&#x63;&#x6f;&#x6d;">&#x73;&#117;&#x70;&#x70;&#x6f;r&#116;&#64;&#x76;&#x69;&#x76;&#97;&#x72;&#97;&#100;&#x6f;.&#x63;&#x6f;&#x6d;</a></li>
+<li>VivaRado <a href="&#109;a&#x69;l&#116;&#111;&#x3a;&#x73;&#x75;&#112;&#x70;&#x6f;r&#x74;&#64;&#x76;i&#x76;&#x61;r&#x61;&#x64;&#x6f;&#x2e;&#99;&#111;m">&#x73;&#x75;&#112;&#x70;&#x6f;r&#x74;&#64;&#x76;i&#x76;&#x61;r&#x61;&#x64;&#x6f;&#x2e;&#99;&#111;m</a></li>
 <li>Andreas Kalpakides</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#109;&#97;&#x69;&#x6c;&#x74;&#x6f;&#58;&#109;&#106;&#108;&#x61;&#103;&#97;&#x74;&#x74;&#x75;&#x74;&#x61;&#x40;&#103;&#109;&#x61;&#105;&#108;&#x2e;&#x63;&#111;&#109;">&#109;&#106;&#108;&#x61;&#103;&#97;&#x74;&#x74;&#x75;&#x74;&#x61;&#x40;&#103;&#109;&#x61;&#105;&#108;&#x2e;&#x63;&#111;&#109;</a></li>
+<li>Michael LaGattuta <a href="&#109;&#97;&#105;&#108;&#x74;o&#x3a;&#x6d;&#x6a;&#x6c;&#97;&#x67;&#97;&#116;&#x74;u&#116;&#97;&#x40;&#x67;&#109;&#97;&#105;l&#x2e;&#x63;&#x6f;&#x6d;">&#x6d;&#x6a;&#x6c;&#97;&#x67;&#97;&#116;&#x74;u&#116;&#97;&#x40;&#x67;&#109;&#97;&#105;l&#x2e;&#x63;&#x6f;&#x6d;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -978,7 +978,7 @@ The Proposed glyph list is ≃1500 Glyphs not including the glyphs for Opentype 
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#109;&#97;&#105;l&#116;o&#x3a;&#115;&#117;&#112;&#112;&#111;&#x72;&#116;&#x40;&#x76;&#105;&#x76;&#97;&#114;&#97;&#100;&#x6f;&#x2e;&#x63;&#111;&#109;">&#115;&#117;&#112;&#112;&#111;&#x72;&#116;&#x40;&#x76;&#105;&#x76;&#97;&#114;&#97;&#100;&#x6f;&#x2e;&#x63;&#111;&#109;</a></li>
+<li><a href="&#x6d;&#x61;&#x69;&#x6c;t&#111;&#58;&#x73;&#117;p&#112;&#111;&#114;&#x74;&#x40;&#118;&#105;&#118;&#x61;&#114;&#x61;&#x64;&#x6f;&#46;&#99;&#x6f;&#x6d;">&#x73;&#117;p&#112;&#111;&#114;&#x74;&#x40;&#118;&#105;&#118;&#x61;&#114;&#x61;&#x64;&#x6f;&#46;&#99;&#x6f;&#x6d;</a></li>
 </ul></li>
 </ul></li>
 </ul>
