--- a/README/README.html
+++ b/README/README.html
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="ma&#105;&#108;&#116;&#x6f;&#58;&#x73;&#117;&#x70;&#x70;&#111;&#114;&#116;&#64;&#x76;&#x69;v&#x61;&#x72;&#97;&#x64;&#x6f;.&#x63;&#111;&#x6d;">&#x73;&#117;&#x70;&#x70;&#111;&#114;&#116;&#64;&#x76;&#x69;v&#x61;&#x72;&#97;&#x64;&#x6f;.&#x63;&#111;&#x6d;</a></li>
+<li>VivaRado <a href="&#109;&#97;i&#x6c;&#116;&#111;&#x3a;&#x73;&#x75;&#x70;&#x70;&#111;&#x72;&#116;&#x40;v&#105;&#118;a&#114;&#97;&#100;&#111;&#46;&#x63;&#x6f;&#109;">&#x73;&#x75;&#x70;&#x70;&#111;&#x72;&#116;&#x40;v&#105;&#118;a&#114;&#97;&#100;&#111;&#46;&#x63;&#x6f;&#109;</a></li>
 <li>Andreas Kalpakides</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#109;&#97;ilt&#111;&#x3a;&#x6d;j&#108;&#x61;&#x67;a&#x74;&#116;&#x75;&#116;&#x61;&#64;&#103;&#109;&#x61;&#x69;&#108;.c&#x6f;&#109;">&#x6d;j&#108;&#x61;&#x67;a&#x74;&#116;&#x75;&#116;&#x61;&#64;&#103;&#109;&#x61;&#x69;&#108;.c&#x6f;&#109;</a></li>
+<li>Michael LaGattuta <a href="&#x6d;&#97;&#x69;&#108;&#116;&#x6f;&#x3a;&#x6d;&#x6a;&#x6c;&#97;&#x67;&#x61;&#116;t&#x75;&#116;&#97;&#x40;&#103;&#x6d;&#97;&#x69;&#x6c;&#46;&#99;&#111;&#x6d;">&#x6d;&#x6a;&#x6c;&#97;&#x67;&#x61;&#116;t&#x75;&#116;&#97;&#x40;&#103;&#x6d;&#97;&#x69;&#x6c;&#46;&#99;&#111;&#x6d;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -871,7 +871,7 @@ The Proposed glyph list is ≃1500 Glyphs not including the glyphs for Opentype 
 
 <pre><span></span><code class='codehilite mermaid'>gantt
         dateFormat  YYYY-MM-DD
-        title Orgdoc Schedule Example
+        title Advent Schedule
         section Advent 3
         A:         done,des1, 2018-08-22,2019-02-16
         B:         done,des2, 2019-02-16, 2019-04-01
@@ -978,7 +978,7 @@ The Proposed glyph list is ≃1500 Glyphs not including the glyphs for Opentype 
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#109;&#97;&#105;&#108;&#116;&#111;&#x3a;&#115;&#x75;&#112;&#x70;&#111;&#114;&#116;&#64;&#118;&#x69;&#x76;&#97;&#x72;a&#100;&#x6f;.&#99;&#x6f;&#109;">&#115;&#x75;&#112;&#x70;&#111;&#114;&#116;&#64;&#118;&#x69;&#x76;&#97;&#x72;a&#100;&#x6f;.&#99;&#x6f;&#109;</a></li>
+<li><a href="&#109;&#97;&#105;l&#116;&#111;&#58;&#115;&#x75;&#x70;&#112;&#111;&#x72;&#116;&#64;&#118;&#105;&#x76;&#97;&#x72;&#97;&#100;&#111;&#46;&#x63;o&#x6d;">&#115;&#x75;&#x70;&#112;&#111;&#x72;&#116;&#64;&#118;&#105;&#x76;&#97;&#x72;&#97;&#100;&#111;&#46;&#x63;o&#x6d;</a></li>
 </ul></li>
 </ul></li>
 </ul>
