--- a/README/README.html
+++ b/README/README.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-		<title>VRD | Advent | 3.001 | 2019/03/23</title>
+		<title>VRD | Advent | 3.001 | 2019/03/31</title>
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/code_native.css">
 		<script type="text/javascript" src="assets/js/mermaid.js"></script>
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#109;&#97;i&#x6c;&#116;&#111;&#x3a;&#x73;&#x75;&#x70;&#x70;&#111;&#x72;&#116;&#x40;v&#105;&#118;a&#114;&#97;&#100;&#111;&#46;&#x63;&#x6f;&#109;">&#x73;&#x75;&#x70;&#x70;&#111;&#x72;&#116;&#x40;v&#105;&#118;a&#114;&#97;&#100;&#111;&#46;&#x63;&#x6f;&#109;</a></li>
+<li>VivaRado <a href="&#x6d;&#x61;&#105;l&#x74;&#111;&#58;&#115;&#117;&#x70;&#x70;&#111;&#114;&#116;&#64;&#118;&#105;&#x76;&#97;&#114;&#97;&#100;&#x6f;.&#99;&#x6f;&#x6d;">&#115;&#117;&#x70;&#x70;&#111;&#114;&#116;&#64;&#118;&#105;&#x76;&#97;&#114;&#97;&#100;&#x6f;.&#99;&#x6f;&#x6d;</a></li>
 <li>Andreas Kalpakides</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#x6d;&#97;&#x69;&#108;&#116;&#x6f;&#x3a;&#x6d;&#x6a;&#x6c;&#97;&#x67;&#x61;&#116;t&#x75;&#116;&#97;&#x40;&#103;&#x6d;&#97;&#x69;&#x6c;&#46;&#99;&#111;&#x6d;">&#x6d;&#x6a;&#x6c;&#97;&#x67;&#x61;&#116;t&#x75;&#116;&#97;&#x40;&#103;&#x6d;&#97;&#x69;&#x6c;&#46;&#99;&#111;&#x6d;</a></li>
+<li>Michael LaGattuta <a href="&#x6d;&#97;&#x69;&#x6c;&#116;&#x6f;&#58;&#109;&#106;&#x6c;&#x61;&#x67;a&#116;&#116;&#117;&#116;&#x61;&#x40;&#103;&#x6d;&#x61;&#105;&#108;&#46;&#99;o&#109;">&#109;&#106;&#x6c;&#x61;&#x67;a&#116;&#116;&#117;&#116;&#x61;&#x40;&#103;&#x6d;&#x61;&#105;&#108;&#46;&#99;o&#109;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -873,9 +873,9 @@ The Proposed glyph list is ≃1500 Glyphs not including the glyphs for Opentype 
         dateFormat  YYYY-MM-DD
         title Advent Schedule
         section Advent 3
-        A:         done,des1, 2018-08-22,2019-02-16
-        B:         done,des2, 2019-02-16, 2019-04-01
-        A:         des3, after des2, 10d
+        ADV-0001 Advent 3:         done,des1, 2018-08-22,2019-02-16
+        ADV-0002 Advent 3 PR:         done,des2, 2019-02-16, 2019-04-01
+        ADV-0003 Advent 4 Planning:         des3, after des2, 10d
 </code></pre>
 
 <ul>
@@ -978,7 +978,7 @@ The Proposed glyph list is ≃1500 Glyphs not including the glyphs for Opentype 
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#109;&#97;&#105;l&#116;&#111;&#58;&#115;&#x75;&#x70;&#112;&#111;&#x72;&#116;&#64;&#118;&#105;&#x76;&#97;&#x72;&#97;&#100;&#111;&#46;&#x63;o&#x6d;">&#115;&#x75;&#x70;&#112;&#111;&#x72;&#116;&#64;&#118;&#105;&#x76;&#97;&#x72;&#97;&#100;&#111;&#46;&#x63;o&#x6d;</a></li>
+<li><a href="&#x6d;&#97;&#105;&#x6c;&#x74;&#111;&#58;&#x73;&#117;&#x70;&#112;&#x6f;r&#x74;&#64;v&#105;&#x76;&#97;&#x72;&#97;&#x64;&#111;&#x2e;&#x63;&#111;&#x6d;">&#x73;&#117;&#x70;&#112;&#x6f;r&#x74;&#64;v&#105;&#x76;&#97;&#x72;&#97;&#x64;&#111;&#x2e;&#x63;&#111;&#x6d;</a></li>
 </ul></li>
 </ul></li>
 </ul>
