--- a/README/README.html
+++ b/README/README.html
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#x6d;&#x61;&#105;l&#x74;&#111;&#58;&#115;&#117;&#x70;&#x70;&#111;&#114;&#116;&#64;&#118;&#105;&#x76;&#97;&#114;&#97;&#100;&#x6f;.&#99;&#x6f;&#x6d;">&#115;&#117;&#x70;&#x70;&#111;&#114;&#116;&#64;&#118;&#105;&#x76;&#97;&#114;&#97;&#100;&#x6f;.&#99;&#x6f;&#x6d;</a></li>
+<li>VivaRado <a href="&#x6d;&#97;&#x69;&#108;&#x74;&#111;&#58;&#x73;u&#112;&#112;&#x6f;&#x72;&#116;&#64;&#x76;&#105;&#118;&#97;&#x72;&#97;&#100;&#x6f;&#46;&#99;&#x6f;&#x6d;">&#x73;u&#112;&#112;&#x6f;&#x72;&#116;&#64;&#x76;&#105;&#118;&#97;&#x72;&#97;&#100;&#x6f;&#46;&#99;&#x6f;&#x6d;</a></li>
 <li>Andreas Kalpakides</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#x6d;&#97;&#x69;&#x6c;&#116;&#x6f;&#58;&#109;&#106;&#x6c;&#x61;&#x67;a&#116;&#116;&#117;&#116;&#x61;&#x40;&#103;&#x6d;&#x61;&#105;&#108;&#46;&#99;o&#109;">&#109;&#106;&#x6c;&#x61;&#x67;a&#116;&#116;&#117;&#116;&#x61;&#x40;&#103;&#x6d;&#x61;&#105;&#108;&#46;&#99;o&#109;</a></li>
+<li>Michael LaGattuta <a href="&#x6d;&#97;&#x69;&#108;&#x74;&#111;&#58;&#x6d;&#x6a;&#108;&#x61;&#x67;&#97;&#116;t&#117;&#116;&#97;&#64;&#x67;&#109;a&#105;&#108;&#x2e;&#x63;&#111;&#x6d;">&#x6d;&#x6a;&#108;&#x61;&#x67;&#97;&#116;t&#117;&#116;&#97;&#64;&#x67;&#109;a&#105;&#108;&#x2e;&#x63;&#111;&#x6d;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -978,7 +978,7 @@ The Proposed glyph list is ≃1500 Glyphs not including the glyphs for Opentype 
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#x6d;&#97;&#105;&#x6c;&#x74;&#111;&#58;&#x73;&#117;&#x70;&#112;&#x6f;r&#x74;&#64;v&#105;&#x76;&#97;&#x72;&#97;&#x64;&#111;&#x2e;&#x63;&#111;&#x6d;">&#x73;&#117;&#x70;&#112;&#x6f;r&#x74;&#64;v&#105;&#x76;&#97;&#x72;&#97;&#x64;&#111;&#x2e;&#x63;&#111;&#x6d;</a></li>
+<li><a href="&#x6d;&#97;&#105;&#x6c;&#116;&#111;&#58;s&#117;&#112;&#112;&#x6f;&#114;&#116;&#64;&#118;&#x69;&#x76;&#97;&#x72;&#x61;&#100;&#x6f;&#46;&#99;&#x6f;&#x6d;">s&#117;&#112;&#112;&#x6f;&#114;&#116;&#64;&#118;&#x69;&#x76;&#97;&#x72;&#x61;&#100;&#x6f;&#46;&#99;&#x6f;&#x6d;</a></li>
 </ul></li>
 </ul></li>
 </ul>
