--- a/README/README.html
+++ b/README/README.html
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#x6d;&#97;&#x69;&#108;&#x74;&#111;&#58;&#x73;u&#112;&#112;&#x6f;&#x72;&#116;&#64;&#x76;&#105;&#118;&#97;&#x72;&#97;&#100;&#x6f;&#46;&#99;&#x6f;&#x6d;">&#x73;u&#112;&#112;&#x6f;&#x72;&#116;&#64;&#x76;&#105;&#118;&#97;&#x72;&#97;&#100;&#x6f;&#46;&#99;&#x6f;&#x6d;</a></li>
+<li>VivaRado <a href="&#x6d;&#x61;&#x69;&#x6c;&#x74;&#x6f;&#58;&#115;&#x75;&#112;&#x70;&#x6f;&#114;&#x74;&#64;&#118;i&#x76;&#97;&#x72;&#x61;&#100;&#x6f;&#x2e;&#x63;&#111;&#x6d;">&#115;&#x75;&#112;&#x70;&#x6f;&#114;&#x74;&#64;&#118;i&#x76;&#97;&#x72;&#x61;&#100;&#x6f;&#x2e;&#x63;&#111;&#x6d;</a></li>
 <li>Andreas Kalpakides</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#x6d;&#97;&#x69;&#108;&#x74;&#111;&#58;&#x6d;&#x6a;&#108;&#x61;&#x67;&#97;&#116;t&#117;&#116;&#97;&#64;&#x67;&#109;a&#105;&#108;&#x2e;&#x63;&#111;&#x6d;">&#x6d;&#x6a;&#108;&#x61;&#x67;&#97;&#116;t&#117;&#116;&#97;&#64;&#x67;&#109;a&#105;&#108;&#x2e;&#x63;&#111;&#x6d;</a></li>
+<li>Michael LaGattuta <a href="&#x6d;&#97;il&#116;&#111;:&#x6d;j&#x6c;&#97;&#103;&#x61;&#x74;&#x74;&#x75;&#x74;&#97;&#64;&#103;&#x6d;&#97;&#105;&#x6c;&#46;&#x63;&#x6f;m">&#x6d;j&#x6c;&#97;&#103;&#x61;&#x74;&#x74;&#x75;&#x74;&#97;&#64;&#103;&#x6d;&#97;&#105;&#x6c;&#46;&#x63;&#x6f;m</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -879,11 +879,6 @@ The Proposed glyph list is ≃1500 Glyphs not including the glyphs for Opentype 
 </code></pre>
 
 <ul>
-<li><p>Completed:</p>
-
-<ul>
-<li><strike><strong>Advent  ∞3.000</strong> / July 01 2018 to 2019-02-16</strike>:</li>
-</ul></li>
 <li><p>Current:</p>
 
 <ul>
@@ -895,6 +890,11 @@ The Proposed glyph list is ≃1500 Glyphs not including the glyphs for Opentype 
 <ul>
 <li>Inititation of Planning for the delivery of Advent 4</li>
 </ul></li>
+</ul></li>
+<li><p>Completed:</p>
+
+<ul>
+<li><strike><strong>Advent  ∞3.000</strong> / July 01 2018 to 2019-02-16</strike>:</li>
 </ul></li>
 </ul>
 
@@ -978,7 +978,7 @@ The Proposed glyph list is ≃1500 Glyphs not including the glyphs for Opentype 
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#x6d;&#97;&#105;&#x6c;&#116;&#111;&#58;s&#117;&#112;&#112;&#x6f;&#114;&#116;&#64;&#118;&#x69;&#x76;&#97;&#x72;&#x61;&#100;&#x6f;&#46;&#99;&#x6f;&#x6d;">s&#117;&#112;&#112;&#x6f;&#114;&#116;&#64;&#118;&#x69;&#x76;&#97;&#x72;&#x61;&#100;&#x6f;&#46;&#99;&#x6f;&#x6d;</a></li>
+<li><a href="&#109;&#x61;&#105;l&#x74;&#x6f;&#58;&#x73;&#x75;&#112;&#x70;o&#114;&#116;&#64;&#x76;i&#118;&#x61;&#x72;&#97;&#x64;&#111;&#x2e;&#x63;o&#109;">&#x73;&#x75;&#112;&#x70;o&#114;&#116;&#64;&#x76;i&#118;&#x61;&#x72;&#97;&#x64;&#111;&#x2e;&#x63;o&#109;</a></li>
 </ul></li>
 </ul></li>
 </ul>
