--- a/README/README.html
+++ b/README/README.html
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#109;&#x61;&#105;&#108;&#x74;o&#58;&#115;&#117;&#x70;p&#x6f;&#x72;&#116;&#64;&#x76;&#105;&#x76;&#x61;&#114;&#x61;&#x64;&#111;&#x2e;co&#x6d;">&#115;&#117;&#x70;p&#x6f;&#x72;&#116;&#64;&#x76;&#105;&#x76;&#x61;&#114;&#x61;&#x64;&#111;&#x2e;co&#x6d;</a></li>
+<li>VivaRado <a href="&#x6d;&#x61;&#105;l&#x74;&#x6f;&#x3a;&#115;&#x75;&#112;&#112;&#111;&#114;&#x74;&#64;v&#x69;v&#97;&#x72;&#x61;&#100;&#x6f;&#46;&#99;&#111;&#x6d;">&#115;&#x75;&#112;&#112;&#111;&#114;&#x74;&#64;v&#x69;v&#97;&#x72;&#x61;&#100;&#x6f;&#46;&#99;&#111;&#x6d;</a></li>
 <li>Andreas Kalpakides</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="m&#97;&#x69;&#108;to&#58;&#109;&#x6a;l&#x61;&#103;&#x61;t&#x74;&#117;&#116;&#97;&#64;&#103;&#109;&#x61;&#x69;&#108;&#46;&#x63;o&#x6d;">&#109;&#x6a;l&#x61;&#103;&#x61;t&#x74;&#117;&#116;&#97;&#64;&#103;&#109;&#x61;&#x69;&#108;&#46;&#x63;o&#x6d;</a></li>
+<li>Michael LaGattuta <a href="&#109;&#97;&#105;lt&#111;&#x3a;&#x6d;&#106;&#x6c;&#97;&#103;&#x61;&#x74;&#116;&#x75;&#x74;&#x61;&#64;&#103;&#109;&#x61;&#x69;&#x6c;&#x2e;&#99;&#111;&#109;">&#x6d;&#106;&#x6c;&#97;&#103;&#x61;&#x74;&#116;&#x75;&#x74;&#x61;&#64;&#103;&#109;&#x61;&#x69;&#x6c;&#x2e;&#99;&#111;&#109;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -589,16 +589,16 @@
 <li>Thin Normal(100, 8pt, 24pt, 144pt)</li>
 <li>Regular Normal(400, 8pt, 24pt, 144pt)</li>
 <li>Bold Normal(700, 8pt, 24pt, 144pt)</li>
-<li><p>Black Normal(700, 8pt, 24pt, 144pt) NEW!</p></li>
-<li><p>Thin Wide(100, 8pt, 24pt, 144pt) NEW</p></li>
+<li>Black Normal(700, 8pt, 24pt, 144pt) NEW!</li>
+<li>Thin Wide(100, 8pt, 24pt, 144pt) NEW</li>
 <li>Regular Wide(400, 8pt, 24pt, 144pt) NEW!</li>
 <li>Bold Wide(700, 8pt, 24pt, 144pt) NEW!</li>
-<li><p>Black Wide(700, 8pt, 24pt, 144pt) NEW!</p></li>
-<li><p>Thin Italic Normal(100, 8pt, 24pt, 144pt)</p></li>
+<li>Black Wide(700, 8pt, 24pt, 144pt) NEW!</li>
+<li>Thin Italic Normal(100, 8pt, 24pt, 144pt)</li>
 <li>Regular Italic Normal(400, 8pt, 24pt, 144pt)</li>
 <li>Bold Italic Normal(700, 8pt, 24pt, 144pt)</li>
-<li><p>Black Italic Normal(700, 8pt, 24pt, 144pt) NEW!</p></li>
-<li><p>Thin Italic Wide(100, 8pt, 24pt, 144pt) NEW!</p></li>
+<li>Black Italic Normal(700, 8pt, 24pt, 144pt) NEW!</li>
+<li>Thin Italic Wide(100, 8pt, 24pt, 144pt) NEW!</li>
 <li>Regular Italic Wide(400, 8pt, 24pt, 144pt) NEW!</li>
 <li>Bold Italic Wide(700, 8pt, 24pt, 144pt) NEW!</li>
 <li>Black Italic Wide(700, 8pt, 24pt, 144pt) NEW!</li>
@@ -614,8 +614,8 @@
 <li><strong>smb</strong>         600     Semi Bold (Demi Bold)</li>
 <li><strong>bld</strong>         700     Bold                                    <em>MM</em></li>
 <li><strong>xbd</strong>         800     Extra Bold (Ultra Bold)</li>
-<li><p><strong>blk</strong>         900     Black (Heavy)                           <em>MM</em> NEW!</p></li>
-<li><p><strong>thn_wd</strong>      100     Thin (Hairline)                         <em>MM</em> NEW!</p></li>
+<li><strong>blk</strong>         900     Black (Heavy)                           <em>MM</em> NEW!</li>
+<li><strong>thn_wd</strong>      100     Thin (Hairline)                         <em>MM</em> NEW!</li>
 <li><strong>xlg_wd</strong>      200     Extra Light (Ultra Light)</li>
 <li><strong>lgt_wd</strong>      300     Light</li>
 <li><strong>reg_wd</strong>      400     Regular                                 <em>MM</em> NEW!</li>
@@ -623,8 +623,8 @@
 <li><strong>smb_wd</strong>      600     Semi Bold (Demi Bold)</li>
 <li><strong>bld_wd</strong>      700     Bold                                    <em>MM</em> NEW!</li>
 <li><strong>xbd_wd</strong>      800     Extra Bold (Ultra Bold)</li>
-<li><p><strong>blk_wd</strong>      900     Black (Heavy)                           <em>MM</em> NEW!</p></li>
-<li><p><strong>thn_it</strong>      100     Italic Thin (Hairline)                  <em>MM</em></p></li>
+<li><strong>blk_wd</strong>      900     Black (Heavy)                           <em>MM</em> NEW!</li>
+<li><strong>thn_it</strong>      100     Italic Thin (Hairline)                  <em>MM</em></li>
 <li><strong>xlg_it</strong>      200     Italic Extra Light (Ultra Light)</li>
 <li><strong>lgt_it</strong>      300     Italic Light</li>
 <li><strong>reg_it</strong>      400     Italic Regular                          <em>MM</em></li>
@@ -632,8 +632,8 @@
 <li><strong>smb_it</strong>      600     Italic Semi Bold (Demi Bold)</li>
 <li><strong>bld_it</strong>      700     Italic Bold                             <em>MM</em></li>
 <li><strong>xbd_it</strong>      800     Extra Bold (Ultra Bold)</li>
-<li><p><strong>blk_it</strong>      900     Black (Heavy)                           <em>MM</em> NEW!</p></li>
-<li><p><strong>thn<em>it</em>wd</strong>   100     Italic Thin (Hairline)                  <em>MM</em> NEW!</p></li>
+<li><strong>blk_it</strong>      900     Black (Heavy)                           <em>MM</em> NEW!</li>
+<li><strong>thn<em>it</em>wd</strong>   100     Italic Thin (Hairline)                  <em>MM</em> NEW!</li>
 <li><strong>xlg<em>it</em>wd</strong>   200     Italic Extra Light (Ultra Light)</li>
 <li><strong>lgt<em>it</em>wd</strong>   300     Italic Light</li>
 <li><strong>reg<em>it</em>wd</strong>   400     Italic Regular                          <em>MM</em> NEW!</li>
@@ -1110,7 +1110,7 @@ later you can export to Componentized UFOs.</p>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#x6d;&#97;&#105;&#108;&#x74;o&#58;&#115;&#x75;&#112;&#x70;&#x6f;&#x72;&#116;&#64;&#118;&#x69;&#118;&#97;&#x72;&#x61;&#100;&#111;.&#99;&#x6f;&#109;">&#115;&#x75;&#112;&#x70;&#x6f;&#x72;&#116;&#64;&#118;&#x69;&#118;&#97;&#x72;&#x61;&#100;&#111;.&#99;&#x6f;&#109;</a></li>
+<li><a href="&#109;&#97;&#105;&#x6c;&#116;&#x6f;&#x3a;&#115;&#x75;p&#112;&#x6f;&#x72;&#116;&#64;v&#x69;&#x76;&#97;&#114;&#x61;&#100;&#x6f;&#46;&#99;&#111;&#x6d;">&#115;&#x75;p&#112;&#x6f;&#x72;&#116;&#64;v&#x69;&#x76;&#97;&#114;&#x61;&#100;&#x6f;&#46;&#99;&#111;&#x6d;</a></li>
 </ul></li>
 </ul></li>
 </ul>
