--- a/README/README.html
+++ b/README/README.html
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#x6d;&#x61;&#105;l&#x74;&#x6f;&#x3a;&#115;&#x75;&#112;&#112;&#111;&#114;&#x74;&#64;v&#x69;v&#97;&#x72;&#x61;&#100;&#x6f;&#46;&#99;&#111;&#x6d;">&#115;&#x75;&#112;&#112;&#111;&#114;&#x74;&#64;v&#x69;v&#97;&#x72;&#x61;&#100;&#x6f;&#46;&#99;&#111;&#x6d;</a></li>
+<li>VivaRado <a href="&#x6d;&#x61;&#x69;&#x6c;&#116;&#111;&#x3a;&#x73;&#x75;&#x70;&#x70;&#111;&#114;&#116;&#x40;&#x76;&#105;v&#97;&#114;&#x61;&#x64;&#111;&#x2e;c&#111;&#109;">&#x73;&#x75;&#x70;&#x70;&#111;&#114;&#116;&#x40;&#x76;&#105;v&#97;&#114;&#x61;&#x64;&#111;&#x2e;c&#111;&#109;</a></li>
 <li>Andreas Kalpakides</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#109;&#97;&#105;lt&#111;&#x3a;&#x6d;&#106;&#x6c;&#97;&#103;&#x61;&#x74;&#116;&#x75;&#x74;&#x61;&#64;&#103;&#109;&#x61;&#x69;&#x6c;&#x2e;&#99;&#111;&#109;">&#x6d;&#106;&#x6c;&#97;&#103;&#x61;&#x74;&#116;&#x75;&#x74;&#x61;&#64;&#103;&#109;&#x61;&#x69;&#x6c;&#x2e;&#99;&#111;&#109;</a></li>
+<li>Michael LaGattuta <a href="&#x6d;a&#x69;&#108;&#x74;o&#58;&#109;&#x6a;&#108;&#97;&#x67;&#x61;&#x74;&#116;&#117;&#x74;&#x61;&#64;&#103;&#109;&#97;&#x69;&#108;&#x2e;c&#x6f;&#x6d;">&#109;&#x6a;&#108;&#97;&#x67;&#x61;&#x74;&#116;&#117;&#x74;&#x61;&#64;&#103;&#109;&#97;&#x69;&#108;&#x2e;c&#x6f;&#x6d;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -633,15 +633,15 @@
 <li><strong>bld_it</strong>      700     Italic Bold                             <em>MM</em></li>
 <li><strong>xbd_it</strong>      800     Extra Bold (Ultra Bold)</li>
 <li><strong>blk_it</strong>      900     Black (Heavy)                           <em>MM</em> NEW!</li>
-<li><strong>thn<em>it</em>wd</strong>   100     Italic Thin (Hairline)                  <em>MM</em> NEW!</li>
-<li><strong>xlg<em>it</em>wd</strong>   200     Italic Extra Light (Ultra Light)</li>
-<li><strong>lgt<em>it</em>wd</strong>   300     Italic Light</li>
-<li><strong>reg<em>it</em>wd</strong>   400     Italic Regular                          <em>MM</em> NEW!</li>
-<li><strong>med<em>it</em>wd</strong>   500     Italic Medium</li>
-<li><strong>smb<em>it</em>wd</strong>   600     Italic Semi Bold (Demi Bold)</li>
-<li><strong>bld<em>it</em>wd</strong>   700     Italic Bold                             <em>MM</em> NEW!</li>
-<li><strong>xbd<em>it</em>wd</strong>   800     Extra Bold (Ultra Bold)</li>
-<li><strong>blk<em>it</em>wd</strong>   900     Black (Heavy)                           <em>MM</em> NEW!</li>
+<li><strong>thn<em>wd</em>it</strong>   100     Italic Thin (Hairline)                  <em>MM</em> NEW!</li>
+<li><strong>xlg<em>wd</em>it</strong>   200     Italic Extra Light (Ultra Light)</li>
+<li><strong>lgt<em>wd</em>it</strong>   300     Italic Light</li>
+<li><strong>reg<em>wd</em>it</strong>   400     Italic Regular                          <em>MM</em> NEW!</li>
+<li><strong>med<em>wd</em>it</strong>   500     Italic Medium</li>
+<li><strong>smb<em>wd</em>it</strong>   600     Italic Semi Bold (Demi Bold)</li>
+<li><strong>bld<em>wd</em>it</strong>   700     Italic Bold                             <em>MM</em> NEW!</li>
+<li><strong>xbd<em>wd</em>it</strong>   800     Extra Bold (Ultra Bold)</li>
+<li><strong>blk<em>wd</em>it</strong>   900     Black (Heavy)                           <em>MM</em> NEW!</li>
 </ul></li>
 </ol>
 
@@ -1110,7 +1110,7 @@ later you can export to Componentized UFOs.</p>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#109;&#97;&#105;&#x6c;&#116;&#x6f;&#x3a;&#115;&#x75;p&#112;&#x6f;&#x72;&#116;&#64;v&#x69;&#x76;&#97;&#114;&#x61;&#100;&#x6f;&#46;&#99;&#111;&#x6d;">&#115;&#x75;p&#112;&#x6f;&#x72;&#116;&#64;v&#x69;&#x76;&#97;&#114;&#x61;&#100;&#x6f;&#46;&#99;&#111;&#x6d;</a></li>
+<li><a href="&#109;ai&#x6c;&#116;&#x6f;&#x3a;&#115;&#117;&#112;&#112;&#x6f;&#114;t&#64;&#x76;&#105;&#118;&#x61;&#114;&#97;&#100;&#x6f;&#x2e;&#99;om">&#115;&#117;&#112;&#112;&#x6f;&#114;t&#64;&#x76;&#105;&#118;&#x61;&#114;&#97;&#100;&#x6f;&#x2e;&#99;om</a></li>
 </ul></li>
 </ul></li>
 </ul>
