Planning for ∞ 4.000: Project Goals, Duration, Weights and Masters, Scripts, Glyphs, Personnel Plan

--- a/README/README.html
+++ b/README/README.html
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#x6d;&#x61;&#x69;&#x6c;&#116;&#111;&#x3a;&#x73;&#x75;&#x70;&#x70;&#111;&#114;&#116;&#x40;&#x76;&#105;v&#97;&#114;&#x61;&#x64;&#111;&#x2e;c&#111;&#109;">&#x73;&#x75;&#x70;&#x70;&#111;&#114;&#116;&#x40;&#x76;&#105;v&#97;&#114;&#x61;&#x64;&#111;&#x2e;c&#111;&#109;</a></li>
+<li>VivaRado <a href="&#x6d;&#x61;&#105;&#x6c;&#116;&#x6f;&#x3a;&#115;&#x75;&#112;&#112;&#x6f;&#114;&#x74;&#64;&#x76;&#105;&#x76;a&#114;&#97;d&#111;&#x2e;&#99;&#111;&#109;">&#115;&#x75;&#112;&#112;&#x6f;&#114;&#x74;&#64;&#x76;&#105;&#x76;a&#114;&#97;d&#111;&#x2e;&#99;&#111;&#109;</a></li>
 <li>Andreas Kalpakides</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#x6d;a&#x69;&#108;&#x74;o&#58;&#109;&#x6a;&#108;&#97;&#x67;&#x61;&#x74;&#116;&#117;&#x74;&#x61;&#64;&#103;&#109;&#97;&#x69;&#108;&#x2e;c&#x6f;&#x6d;">&#109;&#x6a;&#108;&#97;&#x67;&#x61;&#x74;&#116;&#117;&#x74;&#x61;&#64;&#103;&#109;&#97;&#x69;&#108;&#x2e;c&#x6f;&#x6d;</a></li>
+<li>Michael LaGattuta <a href="&#109;&#x61;&#x69;&#108;&#x74;o:&#x6d;j&#108;&#x61;&#103;&#97;&#116;&#x74;&#x75;&#116;&#x61;&#x40;&#x67;&#109;&#97;&#105;&#108;&#x2e;&#99;&#x6f;&#x6d;">&#x6d;j&#108;&#x61;&#103;&#97;&#116;&#x74;&#x75;&#116;&#x61;&#x40;&#x67;&#109;&#97;&#105;&#108;&#x2e;&#99;&#x6f;&#x6d;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -554,13 +554,13 @@
 <li><strong>bld</strong>        700     Bold                                     <em>MM</em></li>
 <li><strike>xbd          800     Extra Bold (Ultra Bold)</strike></li>
 <li><strike>blk          900     Black (Heavy)</strike></li>
-<li><strong>thn_it</strong>     100     Italic Thin (Hairline)               <em>MM</em></li>
-<li><strong>xlg_it</strong>     200     Italic Extra Light (Ultra Light)</li>
-<li><strong>lgt_it</strong>     300     Italic Light</li>
-<li><strong>reg_it</strong>     400     Italic Regular                       <em>MM</em></li>
-<li><strong>med_it</strong>     500     Italic Medium</li>
-<li><strong>smb_it</strong>     600     Italic Semi Bold (Demi Bold)</li>
-<li><strong>bld_it</strong>     700     Italic Bold                             <em>MM</em></li>
+<li><strong>thn-it</strong>     100     Italic Thin (Hairline)               <em>MM</em></li>
+<li><strong>xlg-it</strong>     200     Italic Extra Light (Ultra Light)</li>
+<li><strong>lgt-it</strong>     300     Italic Light</li>
+<li><strong>reg-it</strong>     400     Italic Regular                       <em>MM</em></li>
+<li><strong>med-it</strong>     500     Italic Medium</li>
+<li><strong>smb-it</strong>     600     Italic Semi Bold (Demi Bold)</li>
+<li><strong>bld-it</strong>     700     Italic Bold                             <em>MM</em></li>
 <li><strike>xbd_it       800     Extra Bold (Ultra Bold)</strike></li>
 <li><strike>blk_it       900     Black (Heavy)</strike></li>
 </ul></li>
@@ -615,33 +615,33 @@
 <li><strong>bld</strong>         700     Bold                                    <em>MM</em></li>
 <li><strong>xbd</strong>         800     Extra Bold (Ultra Bold)</li>
 <li><strong>blk</strong>         900     Black (Heavy)                           <em>MM</em> NEW!</li>
-<li><strong>thn_wd</strong>      100     Thin (Hairline)                         <em>MM</em> NEW!</li>
-<li><strong>xlg_wd</strong>      200     Extra Light (Ultra Light)</li>
-<li><strong>lgt_wd</strong>      300     Light</li>
-<li><strong>reg_wd</strong>      400     Regular                                 <em>MM</em> NEW!</li>
-<li><strong>med_wd</strong>      500     Medium</li>
-<li><strong>smb_wd</strong>      600     Semi Bold (Demi Bold)</li>
-<li><strong>bld_wd</strong>      700     Bold                                    <em>MM</em> NEW!</li>
-<li><strong>xbd_wd</strong>      800     Extra Bold (Ultra Bold)</li>
-<li><strong>blk_wd</strong>      900     Black (Heavy)                           <em>MM</em> NEW!</li>
-<li><strong>thn_it</strong>      100     Italic Thin (Hairline)                  <em>MM</em></li>
-<li><strong>xlg_it</strong>      200     Italic Extra Light (Ultra Light)</li>
-<li><strong>lgt_it</strong>      300     Italic Light</li>
-<li><strong>reg_it</strong>      400     Italic Regular                          <em>MM</em></li>
-<li><strong>med_it</strong>      500     Italic Medium</li>
-<li><strong>smb_it</strong>      600     Italic Semi Bold (Demi Bold)</li>
-<li><strong>bld_it</strong>      700     Italic Bold                             <em>MM</em></li>
-<li><strong>xbd_it</strong>      800     Extra Bold (Ultra Bold)</li>
-<li><strong>blk_it</strong>      900     Black (Heavy)                           <em>MM</em> NEW!</li>
-<li><strong>thn<em>wd</em>it</strong>   100     Italic Thin (Hairline)                  <em>MM</em> NEW!</li>
-<li><strong>xlg<em>wd</em>it</strong>   200     Italic Extra Light (Ultra Light)</li>
-<li><strong>lgt<em>wd</em>it</strong>   300     Italic Light</li>
-<li><strong>reg<em>wd</em>it</strong>   400     Italic Regular                          <em>MM</em> NEW!</li>
-<li><strong>med<em>wd</em>it</strong>   500     Italic Medium</li>
-<li><strong>smb<em>wd</em>it</strong>   600     Italic Semi Bold (Demi Bold)</li>
-<li><strong>bld<em>wd</em>it</strong>   700     Italic Bold                             <em>MM</em> NEW!</li>
-<li><strong>xbd<em>wd</em>it</strong>   800     Extra Bold (Ultra Bold)</li>
-<li><strong>blk<em>wd</em>it</strong>   900     Black (Heavy)                           <em>MM</em> NEW!</li>
+<li><strong>thn-wd</strong>      100     Thin (Hairline)                         <em>MM</em> NEW!</li>
+<li><strong>xlg-wd</strong>      200     Extra Light (Ultra Light)</li>
+<li><strong>lgt-wd</strong>      300     Light</li>
+<li><strong>reg-wd</strong>      400     Regular                                 <em>MM</em> NEW!</li>
+<li><strong>med-wd</strong>      500     Medium</li>
+<li><strong>smb-wd</strong>      600     Semi Bold (Demi Bold)</li>
+<li><strong>bld-wd</strong>      700     Bold                                    <em>MM</em> NEW!</li>
+<li><strong>xbd-wd</strong>      800     Extra Bold (Ultra Bold)</li>
+<li><strong>blk-wd</strong>      900     Black (Heavy)                           <em>MM</em> NEW!</li>
+<li><strong>thn-it</strong>      100     Italic Thin (Hairline)                  <em>MM</em></li>
+<li><strong>xlg-it</strong>      200     Italic Extra Light (Ultra Light)</li>
+<li><strong>lgt-it</strong>      300     Italic Light</li>
+<li><strong>reg-it</strong>      400     Italic Regular                          <em>MM</em></li>
+<li><strong>med-it</strong>      500     Italic Medium</li>
+<li><strong>smb-it</strong>      600     Italic Semi Bold (Demi Bold)</li>
+<li><strong>bld-it</strong>      700     Italic Bold                             <em>MM</em></li>
+<li><strong>xbd-it</strong>      800     Extra Bold (Ultra Bold)</li>
+<li><strong>blk-it</strong>      900     Black (Heavy)                           <em>MM</em> NEW!</li>
+<li><strong>thn-wd-it</strong>   100     Italic Thin (Hairline)                  <em>MM</em> NEW!</li>
+<li><strong>xlg-wd-it</strong>   200     Italic Extra Light (Ultra Light)</li>
+<li><strong>lgt-wd-it</strong>   300     Italic Light</li>
+<li><strong>reg-wd-it</strong>   400     Italic Regular                          <em>MM</em> NEW!</li>
+<li><strong>med-wd-it</strong>   500     Italic Medium</li>
+<li><strong>smb-wd-it</strong>   600     Italic Semi Bold (Demi Bold)</li>
+<li><strong>bld-wd-it</strong>   700     Italic Bold                             <em>MM</em> NEW!</li>
+<li><strong>xbd-wd-it</strong>   800     Extra Bold (Ultra Bold)</li>
+<li><strong>blk-wd-it</strong>   900     Black (Heavy)                           <em>MM</em> NEW!</li>
 </ul></li>
 </ol>
 
@@ -1110,7 +1110,7 @@ later you can export to Componentized UFOs.</p>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#109;ai&#x6c;&#116;&#x6f;&#x3a;&#115;&#117;&#112;&#112;&#x6f;&#114;t&#64;&#x76;&#105;&#118;&#x61;&#114;&#97;&#100;&#x6f;&#x2e;&#99;om">&#115;&#117;&#112;&#112;&#x6f;&#114;t&#64;&#x76;&#105;&#118;&#x61;&#114;&#97;&#100;&#x6f;&#x2e;&#99;om</a></li>
+<li><a href="&#x6d;&#x61;&#105;&#x6c;&#116;&#x6f;&#58;&#115;&#117;p&#112;&#x6f;&#x72;&#x74;&#x40;&#x76;&#x69;&#x76;&#97;&#114;&#x61;&#100;&#x6f;&#x2e;&#99;&#111;&#109;">&#115;&#117;p&#112;&#x6f;&#x72;&#x74;&#x40;&#x76;&#x69;&#x76;&#97;&#114;&#x61;&#100;&#x6f;&#x2e;&#99;&#111;&#109;</a></li>
 </ul></li>
 </ul></li>
 </ul>
