--- a/README/README.html
+++ b/README/README.html
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#x6d;&#x61;&#105;&#x6c;&#116;&#x6f;&#x3a;&#115;&#x75;&#112;&#112;&#x6f;&#114;&#x74;&#64;&#x76;&#105;&#x76;a&#114;&#97;d&#111;&#x2e;&#99;&#111;&#109;">&#115;&#x75;&#112;&#112;&#x6f;&#114;&#x74;&#64;&#x76;&#105;&#x76;a&#114;&#97;d&#111;&#x2e;&#99;&#111;&#109;</a></li>
+<li>VivaRado <a href="&#109;&#97;&#105;&#108;&#x74;&#x6f;&#x3a;s&#x75;&#112;&#112;&#x6f;&#x72;&#116;&#x40;&#x76;i&#x76;&#x61;&#x72;&#x61;&#x64;&#111;&#46;&#x63;&#x6f;&#109;">s&#x75;&#112;&#112;&#x6f;&#x72;&#116;&#x40;&#x76;i&#x76;&#x61;&#x72;&#x61;&#x64;&#111;&#46;&#x63;&#x6f;&#109;</a></li>
 <li>Andreas Kalpakides</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#109;&#x61;&#x69;&#108;&#x74;o:&#x6d;j&#108;&#x61;&#103;&#97;&#116;&#x74;&#x75;&#116;&#x61;&#x40;&#x67;&#109;&#97;&#105;&#108;&#x2e;&#99;&#x6f;&#x6d;">&#x6d;j&#108;&#x61;&#103;&#97;&#116;&#x74;&#x75;&#116;&#x61;&#x40;&#x67;&#109;&#97;&#105;&#108;&#x2e;&#99;&#x6f;&#x6d;</a></li>
+<li>Michael LaGattuta <a href="&#109;&#x61;&#x69;lt&#111;&#58;&#x6d;&#x6a;&#108;&#97;&#103;&#x61;&#x74;&#x74;&#117;&#x74;&#x61;&#64;&#103;&#x6d;&#x61;i&#108;&#46;&#x63;o&#109;">&#x6d;&#x6a;&#108;&#97;&#103;&#x61;&#x74;&#x74;&#117;&#x74;&#x61;&#64;&#103;&#x6d;&#x61;i&#108;&#46;&#x63;o&#109;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1006,27 +1006,44 @@ later you can export to Componentized UFOs.</p>
         title Advent Schedule
         section Advent 3
         ADV-0001 Advent 3:         done,des1, 2018-08-22,2019-02-16
-        ADV-0002 Advent 3 PR:         done,des2, 2019-02-16, 2019-04-01
-        ADV-0003 Advent 4 Planning:         des3, after des2, 10d
+        ADV-0003 Advent 3 PR:         done,des2, 2019-02-16, 2019-04-01
+        ADV-0004 Advent 4 Planning:         des3, after des2, 10d
+        ADV-0004-0001 Planning for 4:         done, des3, 2019-03-31, 2h
 </code></pre>
 
 <ul>
 <li><p>Current:</p>
 
 <ul>
-<li><strong>Advent PR ∞3.000</strong> / from February 02 2019 to April 01 2019:
+<li><strong>ADV-0003</strong> / from February 02 2019 to April 01 2019:
+<ul>
+<li><strong>Advent PR ∞3.000</strong>
 <ul>
 <li>We are waiting for PR to Google Fonts.</li>
 </ul></li>
-<li><strong>Advent ∞4.000</strong> / After PR in April 2019:
+</ul></li>
+<li><strong>ADV-0004</strong> / After PR in April 2019:
 <ul>
-<li>Inititation of Planning for the delivery of Advent 4</li>
+<li><strong>Advent ∞4.000</strong></li>
+</ul></li>
+<li><strong>ADV-0004</strong> / After PR in April 2019:
+<ul>
+<li><strong>Advent ∞4.000 Planning</strong>:
+<ul>
+<li><strong>ADV-0004-0001 Planning for 4</strong> / March 31:
+<ul>
+<li>Planning for ∞ 4.000: Project Goals, Duration, Weights and Masters, Scripts, Glyphs, Personnel Plan</li>
+</ul></li>
+</ul></li>
 </ul></li>
 </ul></li>
 <li><p>Completed:</p>
 
 <ul>
-<li><strike><strong>Advent  ∞3.000</strong> / July 01 2018 to 2019-02-16</strike>:</li>
+<li><strike><strong>ADV-0001</strong> / July 01 2018 to 2019-02-16</strike>:
+<ul>
+<li>Advent  ∞3.000 Delivered.</li>
+</ul></li>
 </ul></li>
 </ul>
 
@@ -1110,7 +1127,7 @@ later you can export to Componentized UFOs.</p>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#x6d;&#x61;&#105;&#x6c;&#116;&#x6f;&#58;&#115;&#117;p&#112;&#x6f;&#x72;&#x74;&#x40;&#x76;&#x69;&#x76;&#97;&#114;&#x61;&#100;&#x6f;&#x2e;&#99;&#111;&#109;">&#115;&#117;p&#112;&#x6f;&#x72;&#x74;&#x40;&#x76;&#x69;&#x76;&#97;&#114;&#x61;&#100;&#x6f;&#x2e;&#99;&#111;&#109;</a></li>
+<li><a href="&#x6d;&#97;&#105;&#108;&#x74;&#x6f;&#58;&#115;&#117;&#112;&#x70;&#x6f;&#114;&#x74;&#64;&#x76;i&#x76;&#97;&#114;&#x61;&#x64;&#111;&#46;&#99;o&#109;">&#115;&#117;&#112;&#x70;&#x6f;&#114;&#x74;&#64;&#x76;i&#x76;&#97;&#114;&#x61;&#x64;&#111;&#46;&#99;o&#109;</a></li>
 </ul></li>
 </ul></li>
 </ul>
