--- a/README/README.html
+++ b/README/README.html
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#109;&#97;&#105;&#108;&#x74;&#x6f;&#x3a;s&#x75;&#112;&#112;&#x6f;&#x72;&#116;&#x40;&#x76;i&#x76;&#x61;&#x72;&#x61;&#x64;&#111;&#46;&#x63;&#x6f;&#109;">s&#x75;&#112;&#112;&#x6f;&#x72;&#116;&#x40;&#x76;i&#x76;&#x61;&#x72;&#x61;&#x64;&#111;&#46;&#x63;&#x6f;&#109;</a></li>
+<li>VivaRado <a href="&#109;&#x61;&#x69;&#108;&#x74;&#x6f;&#x3a;&#115;&#x75;&#x70;&#x70;&#x6f;&#114;&#116;&#x40;&#x76;&#105;&#118;&#x61;&#x72;&#97;&#x64;&#111;&#x2e;&#x63;&#x6f;&#x6d;">&#115;&#x75;&#x70;&#x70;&#x6f;&#114;&#116;&#x40;&#x76;&#105;&#118;&#x61;&#x72;&#97;&#x64;&#111;&#x2e;&#x63;&#x6f;&#x6d;</a></li>
 <li>Andreas Kalpakides</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#109;&#x61;&#x69;lt&#111;&#58;&#x6d;&#x6a;&#108;&#97;&#103;&#x61;&#x74;&#x74;&#117;&#x74;&#x61;&#64;&#103;&#x6d;&#x61;i&#108;&#46;&#x63;o&#109;">&#x6d;&#x6a;&#108;&#97;&#103;&#x61;&#x74;&#x74;&#117;&#x74;&#x61;&#64;&#103;&#x6d;&#x61;i&#108;&#46;&#x63;o&#109;</a></li>
+<li>Michael LaGattuta <a href="&#109;&#97;&#x69;&#108;&#x74;&#111;&#x3a;&#x6d;&#106;&#x6c;&#97;&#x67;&#97;&#x74;&#x74;&#x75;&#x74;&#97;&#x40;&#103;&#109;&#97;&#x69;&#108;&#x2e;&#x63;&#111;&#109;">&#x6d;&#106;&#x6c;&#97;&#x67;&#97;&#x74;&#x74;&#x75;&#x74;&#97;&#x40;&#103;&#109;&#97;&#x69;&#108;&#x2e;&#x63;&#111;&#109;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1026,13 +1026,18 @@ later you can export to Componentized UFOs.</p>
 <ul>
 <li><strong>Advent ∞4.000</strong></li>
 </ul></li>
-<li><strong>ADV-0004</strong> / After PR in April 2019:
-<ul>
-<li><strong>Advent ∞4.000 Planning</strong>:
+<li><strong>ADV-0004 Advent ∞4.000 Planning</strong> / After PR in April 2019:
 <ul>
 <li><strong>ADV-0004-0001 Planning for 4</strong> / March 31:
 <ul>
-<li>Planning for ∞ 4.000: Project Goals, Duration, Weights and Masters, Scripts, Glyphs, Personnel Plan</li>
+<li>Planning for ∞ 4.000: 
+<ul>
+<li>Project Goals</li>
+<li>Duration</li>
+<li>Weights and Masters</li>
+<li>Scripts</li>
+<li>Glyphs</li>
+<li>Personnel Plan</li>
 </ul></li>
 </ul></li>
 </ul></li>
@@ -1127,7 +1132,7 @@ later you can export to Componentized UFOs.</p>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#x6d;&#97;&#105;&#108;&#x74;&#x6f;&#58;&#115;&#117;&#112;&#x70;&#x6f;&#114;&#x74;&#64;&#x76;i&#x76;&#97;&#114;&#x61;&#x64;&#111;&#46;&#99;o&#109;">&#115;&#117;&#112;&#x70;&#x6f;&#114;&#x74;&#64;&#x76;i&#x76;&#97;&#114;&#x61;&#x64;&#111;&#46;&#99;o&#109;</a></li>
+<li><a href="&#109;&#97;&#x69;&#x6c;&#116;&#x6f;&#58;&#x73;&#x75;&#112;&#112;&#111;r&#x74;&#x40;&#118;&#105;&#118;&#x61;&#114;&#x61;&#100;&#x6f;&#x2e;&#x63;&#x6f;&#109;">&#x73;&#x75;&#112;&#112;&#111;r&#x74;&#x40;&#118;&#105;&#118;&#x61;&#114;&#x61;&#100;&#x6f;&#x2e;&#x63;&#x6f;&#109;</a></li>
 </ul></li>
 </ul></li>
 </ul>
