--- a/README/README.html
+++ b/README/README.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-		<title>VRD | Advent | 3.002 | 2019/04/01</title>
+		<title>VRD | Advent | 3.002 | 2019/04/02</title>
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/code_native.css">
 		<script type="text/javascript" src="assets/js/mermaid.js"></script>
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#109;&#x61;&#x69;&#108;&#x74;&#x6f;&#x3a;&#115;&#x75;&#x70;&#x70;&#x6f;&#114;&#116;&#x40;&#x76;&#105;&#118;&#x61;&#x72;&#97;&#x64;&#111;&#x2e;&#x63;&#x6f;&#x6d;">&#115;&#x75;&#x70;&#x70;&#x6f;&#114;&#116;&#x40;&#x76;&#105;&#118;&#x61;&#x72;&#97;&#x64;&#111;&#x2e;&#x63;&#x6f;&#x6d;</a></li>
+<li>VivaRado <a href="&#109;&#97;&#105;&#x6c;&#116;&#x6f;&#x3a;&#x73;&#x75;&#x70;&#112;&#x6f;&#x72;t&#x40;&#118;&#x69;&#118;&#97;&#x72;&#x61;&#100;&#x6f;&#46;&#99;&#x6f;&#109;">&#x73;&#x75;&#x70;&#112;&#x6f;&#x72;t&#x40;&#118;&#x69;&#118;&#97;&#x72;&#x61;&#100;&#x6f;&#46;&#99;&#x6f;&#109;</a></li>
 <li>Andreas Kalpakides</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#109;&#97;&#x69;&#108;&#x74;&#111;&#x3a;&#x6d;&#106;&#x6c;&#97;&#x67;&#97;&#x74;&#x74;&#x75;&#x74;&#97;&#x40;&#103;&#109;&#97;&#x69;&#108;&#x2e;&#x63;&#111;&#109;">&#x6d;&#106;&#x6c;&#97;&#x67;&#97;&#x74;&#x74;&#x75;&#x74;&#97;&#x40;&#103;&#109;&#97;&#x69;&#108;&#x2e;&#x63;&#111;&#109;</a></li>
+<li>Michael LaGattuta <a href="&#x6d;a&#105;&#108;&#x74;o&#58;&#109;&#x6a;&#x6c;&#97;&#x67;&#97;&#116;&#x74;&#117;t&#x61;&#64;&#103;&#109;&#x61;&#105;&#x6c;&#46;&#99;&#111;&#x6d;">&#109;&#x6a;&#x6c;&#97;&#x67;&#97;&#116;&#x74;&#117;t&#x61;&#64;&#103;&#109;&#x61;&#105;&#x6c;&#46;&#99;&#111;&#x6d;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1132,7 +1132,7 @@ later you can export to Componentized UFOs.</p>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#109;&#97;&#x69;&#x6c;&#116;&#x6f;&#58;&#x73;&#x75;&#112;&#112;&#111;r&#x74;&#x40;&#118;&#105;&#118;&#x61;&#114;&#x61;&#100;&#x6f;&#x2e;&#x63;&#x6f;&#109;">&#x73;&#x75;&#112;&#112;&#111;r&#x74;&#x40;&#118;&#105;&#118;&#x61;&#114;&#x61;&#100;&#x6f;&#x2e;&#x63;&#x6f;&#109;</a></li>
+<li><a href="&#109;&#x61;&#105;&#x6c;t&#x6f;:&#115;&#117;&#x70;&#112;&#x6f;&#114;&#116;&#x40;v&#105;&#118;&#97;&#x72;&#x61;&#x64;&#x6f;&#46;&#99;&#111;&#x6d;">&#115;&#117;&#x70;&#112;&#x6f;&#114;&#116;&#x40;v&#105;&#118;&#97;&#x72;&#x61;&#x64;&#x6f;&#46;&#99;&#111;&#x6d;</a></li>
 </ul></li>
 </ul></li>
 </ul>
