Filler Planning for advent 4

--- a/README/README.html
+++ b/README/README.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-		<title>VRD | Advent | 3.002 | 2019/04/02</title>
+		<title>VRD | Advent | 3.002 | 2019/04/08</title>
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/code_native.css">
 		<script type="text/javascript" src="assets/js/mermaid.js"></script>
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#109;&#97;&#105;&#x6c;&#116;&#x6f;&#x3a;&#x73;&#x75;&#x70;&#112;&#x6f;&#x72;t&#x40;&#118;&#x69;&#118;&#97;&#x72;&#x61;&#100;&#x6f;&#46;&#99;&#x6f;&#109;">&#x73;&#x75;&#x70;&#112;&#x6f;&#x72;t&#x40;&#118;&#x69;&#118;&#97;&#x72;&#x61;&#100;&#x6f;&#46;&#99;&#x6f;&#109;</a></li>
+<li>VivaRado <a href="&#109;a&#x69;&#108;&#x74;&#x6f;&#58;s&#x75;&#x70;por&#x74;&#64;&#118;&#105;&#x76;&#97;&#114;&#x61;&#x64;&#111;&#x2e;c&#x6f;m">s&#x75;&#x70;por&#x74;&#64;&#118;&#105;&#x76;&#97;&#114;&#x61;&#x64;&#111;&#x2e;c&#x6f;m</a></li>
 <li>Andreas Kalpakides</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#x6d;a&#105;&#108;&#x74;o&#58;&#109;&#x6a;&#x6c;&#97;&#x67;&#97;&#116;&#x74;&#117;t&#x61;&#64;&#103;&#109;&#x61;&#105;&#x6c;&#46;&#99;&#111;&#x6d;">&#109;&#x6a;&#x6c;&#97;&#x67;&#97;&#116;&#x74;&#117;t&#x61;&#64;&#103;&#109;&#x61;&#105;&#x6c;&#46;&#99;&#111;&#x6d;</a></li>
+<li>Michael LaGattuta <a href="&#x6d;&#97;&#105;&#108;&#x74;&#111;&#x3a;&#109;&#x6a;&#108;&#x61;&#103;a&#x74;&#116;&#117;&#116;&#97;&#64;&#103;&#109;a&#x69;&#x6c;&#46;&#99;&#x6f;&#109;">&#109;&#x6a;&#108;&#x61;&#103;a&#x74;&#116;&#117;&#116;&#97;&#64;&#103;&#109;a&#x69;&#x6c;&#46;&#99;&#x6f;&#109;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1007,8 +1007,30 @@ later you can export to Componentized UFOs.</p>
         section Advent 3
         ADV-0001 Advent 3:         done,des1, 2018-08-22,2019-02-16
         ADV-0003 Advent 3 PR:         done,des2, 2019-02-16, 2019-04-01
-        ADV-0004 Advent 4 Planning:         des3, after des2, 10d
-        ADV-0004-0001 Planning for 4:         done, des3, 2019-03-31, 2h
+        ADV-0004 Advent 4 Planning:         des3, after des2, 2019-04-30
+        ADV-0004-0001:         done, des4, 2019-03-31, 2h
+        ADV-0004-0002:         des5, 2019-04-09, 2h
+        ADV-0004-0003:         des6, 2019-04-10, 2h
+        ADV-0004-0004:         des7, 2019-04-11, 2h
+        ADV-0004-0005:         des8, 2019-04-12, 2h
+        ADV-0004-0006:         des9, 2019-04-13, 2h
+        ADV-0004-0007:         des10, 2019-04-14, 2h
+        ADV-0004-0008:         des11, 2019-04-15, 2h
+        ADV-0004-0009:         des12, 2019-04-16, 2h
+        ADV-0004-0010:         des13, 2019-04-17, 2h
+        ADV-0004-0011:         des14, 2019-04-18, 2h
+        ADV-0004-0012:         des15, 2019-04-19, 2h
+        ADV-0004-0013:         des16, 2019-04-20, 2h
+        ADV-0004-0014:         des17, 2019-04-21, 2h
+        ADV-0004-0015:         des18, 2019-04-22, 2h
+        ADV-0004-0016:         des19, 2019-04-23, 2h
+        ADV-0004-0017:         des20, 2019-04-24, 2h
+        ADV-0004-0018:         des21, 2019-04-25, 2h
+        ADV-0004-0019:         des22, 2019-04-26, 2h
+        ADV-0004-0020:         des23, 2019-04-27, 2h
+        ADV-0004-0021:         des24, 2019-04-28, 2h
+        ADV-0004-0022:         des25, 2019-04-29, 2h
+        ADV-0004-0023:         des26, 2019-04-30, 2h
 </code></pre>
 
 <ul>
@@ -1026,7 +1048,7 @@ later you can export to Componentized UFOs.</p>
 <ul>
 <li><strong>Advent ∞4.000</strong></li>
 </ul></li>
-<li><strong>ADV-0004 Advent ∞4.000 Planning</strong> / After PR in April 2019:
+<li><strong>ADV-0004 Advent ∞4.000 Planning</strong> / After PR whole April 2019:
 <ul>
 <li><strong>ADV-0004-0001 Planning for 4</strong> / March 31:
 <ul>
@@ -1132,7 +1154,7 @@ later you can export to Componentized UFOs.</p>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#109;&#x61;&#105;&#x6c;t&#x6f;:&#115;&#117;&#x70;&#112;&#x6f;&#114;&#116;&#x40;v&#105;&#118;&#97;&#x72;&#x61;&#x64;&#x6f;&#46;&#99;&#111;&#x6d;">&#115;&#117;&#x70;&#112;&#x6f;&#114;&#116;&#x40;v&#105;&#118;&#97;&#x72;&#x61;&#x64;&#x6f;&#46;&#99;&#111;&#x6d;</a></li>
+<li><a href="&#109;&#97;&#105;&#x6c;&#x74;&#111;&#x3a;&#x73;u&#112;&#x70;&#111;&#114;&#116;&#64;&#118;&#x69;v&#97;&#x72;&#97;&#100;&#x6f;&#46;&#99;&#111;&#x6d;">&#x73;u&#112;&#x70;&#111;&#114;&#116;&#64;&#118;&#x69;v&#97;&#x72;&#97;&#100;&#x6f;&#46;&#99;&#111;&#x6d;</a></li>
 </ul></li>
 </ul></li>
 </ul>
