--- a/README/README.html
+++ b/README/README.html
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#109;a&#x69;&#108;&#x74;&#x6f;&#58;s&#x75;&#x70;por&#x74;&#64;&#118;&#105;&#x76;&#97;&#114;&#x61;&#x64;&#111;&#x2e;c&#x6f;m">s&#x75;&#x70;por&#x74;&#64;&#118;&#105;&#x76;&#97;&#114;&#x61;&#x64;&#111;&#x2e;c&#x6f;m</a></li>
+<li>VivaRado <a href="&#x6d;&#x61;&#105;&#x6c;&#x74;&#111;&#x3a;&#x73;&#x75;&#112;&#x70;o&#x72;&#x74;&#x40;&#118;&#x69;&#118;&#97;&#x72;&#x61;&#x64;&#x6f;&#x2e;&#99;&#x6f;&#109;">&#x73;&#x75;&#112;&#x70;o&#x72;&#x74;&#x40;&#118;&#x69;&#118;&#97;&#x72;&#x61;&#x64;&#x6f;&#x2e;&#99;&#x6f;&#109;</a></li>
 <li>Andreas Kalpakides</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#x6d;&#97;&#105;&#108;&#x74;&#111;&#x3a;&#109;&#x6a;&#108;&#x61;&#103;a&#x74;&#116;&#117;&#116;&#97;&#64;&#103;&#109;a&#x69;&#x6c;&#46;&#99;&#x6f;&#109;">&#109;&#x6a;&#108;&#x61;&#103;a&#x74;&#116;&#117;&#116;&#97;&#64;&#103;&#109;a&#x69;&#x6c;&#46;&#99;&#x6f;&#109;</a></li>
+<li>Michael LaGattuta <a href="&#x6d;&#x61;&#105;&#x6c;&#x74;&#111;&#x3a;&#109;j&#108;&#97;&#x67;&#x61;&#x74;&#x74;&#117;&#116;&#97;&#x40;&#103;&#109;&#97;&#105;&#x6c;&#46;&#x63;&#x6f;&#x6d;">&#109;j&#108;&#97;&#x67;&#x61;&#x74;&#x74;&#117;&#116;&#97;&#x40;&#103;&#109;&#97;&#105;&#x6c;&#46;&#x63;&#x6f;&#x6d;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1154,7 +1154,7 @@ later you can export to Componentized UFOs.</p>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#109;&#97;&#105;&#x6c;&#x74;&#111;&#x3a;&#x73;u&#112;&#x70;&#111;&#114;&#116;&#64;&#118;&#x69;v&#97;&#x72;&#97;&#100;&#x6f;&#46;&#99;&#111;&#x6d;">&#x73;u&#112;&#x70;&#111;&#114;&#116;&#64;&#118;&#x69;v&#97;&#x72;&#97;&#100;&#x6f;&#46;&#99;&#111;&#x6d;</a></li>
+<li><a href="&#109;&#x61;&#105;&#108;&#116;o&#x3a;&#115;&#x75;&#x70;&#x70;&#x6f;r&#116;&#x40;v&#105;v&#97;&#x72;&#x61;&#x64;&#x6f;.&#x63;&#x6f;&#x6d;">&#115;&#x75;&#x70;&#x70;&#x6f;r&#116;&#x40;v&#105;v&#97;&#x72;&#x61;&#x64;&#x6f;.&#x63;&#x6f;&#x6d;</a></li>
 </ul></li>
 </ul></li>
 </ul>
