--- a/README/README.html
+++ b/README/README.html
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#x73;&#117;&#x70;&#112;&#x6f;&#114;&#x74;&#x40;&#x76;&#105;&#x76;&#x61;r&#97;&#x64;&#x6f;&#x2e;&#x63;o&#109;">&#x73;&#117;&#x70;&#112;&#x6f;&#114;&#x74;&#x40;&#x76;&#105;&#x76;&#x61;r&#97;&#x64;&#x6f;&#x2e;&#x63;o&#109;</a></li>
+<li>VivaRado <a href="&#109;&#x61;&#x69;&#x6c;&#x74;&#x6f;&#x3a;&#x73;u&#112;&#112;&#111;&#114;t&#x40;&#x76;&#x69;&#118;&#x61;&#x72;&#x61;&#x64;&#111;&#x2e;&#x63;&#x6f;m">&#x73;u&#112;&#112;&#111;&#114;t&#x40;&#x76;&#x69;&#118;&#x61;&#x72;&#x61;&#x64;&#111;&#x2e;&#x63;&#x6f;m</a></li>
 <li>Andreas Kalpakides</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#109;&#x61;&#105;&#x6c;&#116;o&#x3a;&#x6d;&#106;&#x6c;&#x61;&#x67;&#x61;&#116;&#x74;&#x75;&#x74;&#97;&#64;&#103;&#x6d;&#97;&#x69;l&#x2e;&#x63;&#x6f;m">&#x6d;&#106;&#x6c;&#x61;&#x67;&#x61;&#116;&#x74;&#x75;&#x74;&#97;&#64;&#103;&#x6d;&#97;&#x69;l&#x2e;&#x63;&#x6f;m</a></li>
+<li>Michael LaGattuta <a href="&#x6d;&#x61;&#105;&#108;&#116;o&#58;&#109;&#106;&#x6c;&#97;g&#x61;t&#116;&#x75;&#x74;&#x61;&#x40;&#x67;&#109;&#97;&#x69;&#108;.c&#x6f;&#109;">&#109;&#106;&#x6c;&#97;g&#x61;t&#116;&#x75;&#x74;&#x61;&#x40;&#x67;&#109;&#97;&#x69;&#108;.c&#x6f;&#109;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -791,6 +791,8 @@ later you can export to Componentized UFOs.</p>
 </ul></li>
 </ul>
 
+<p><a href="https://github.com/googlefonts/gftools/tree/master/Lib/gftools/encodings">Encoding NAM Files</a></p>
+
 <hr />
 
 <h3><strong>Introduction / Phase Introduction / Planning Phase / Safe Planning / Project Plan / Glyphs</strong></h3>
@@ -1154,7 +1156,7 @@ later you can export to Componentized UFOs.</p>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="m&#97;i&#x6c;&#x74;&#x6f;&#x3a;&#115;&#117;&#x70;&#112;&#111;&#x72;&#x74;&#x40;&#118;&#105;&#118;&#97;&#x72;&#x61;&#100;&#x6f;&#46;&#x63;&#x6f;&#109;">&#115;&#117;&#x70;&#112;&#111;&#x72;&#x74;&#x40;&#118;&#105;&#118;&#97;&#x72;&#x61;&#100;&#x6f;&#46;&#x63;&#x6f;&#109;</a></li>
+<li><a href="&#109;&#97;&#x69;&#x6c;&#x74;&#x6f;&#58;&#x73;&#x75;&#112;&#x70;o&#114;&#x74;&#64;&#x76;&#x69;&#x76;a&#x72;a&#x64;&#x6f;&#46;&#99;&#x6f;&#x6d;">&#x73;&#x75;&#112;&#x70;o&#114;&#x74;&#64;&#x76;&#x69;&#x76;a&#x72;a&#x64;&#x6f;&#46;&#99;&#x6f;&#x6d;</a></li>
 </ul></li>
 </ul></li>
 </ul>
