Encoding Files Location, scheduled for NAM comparisson

--- a/README/README.html
+++ b/README/README.html
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#109;&#x61;&#x69;&#x6c;&#x74;&#x6f;&#x3a;&#x73;u&#112;&#112;&#111;&#114;t&#x40;&#x76;&#x69;&#118;&#x61;&#x72;&#x61;&#x64;&#111;&#x2e;&#x63;&#x6f;m">&#x73;u&#112;&#112;&#111;&#114;t&#x40;&#x76;&#x69;&#118;&#x61;&#x72;&#x61;&#x64;&#111;&#x2e;&#x63;&#x6f;m</a></li>
+<li>VivaRado <a href="m&#97;&#x69;&#108;t&#x6f;:&#x73;&#117;&#x70;&#x70;&#111;&#114;&#x74;&#64;&#118;&#x69;&#x76;ar&#97;&#100;&#x6f;&#46;c&#111;m">&#x73;&#117;&#x70;&#x70;&#111;&#114;&#x74;&#64;&#118;&#x69;&#x76;ar&#97;&#100;&#x6f;&#46;c&#111;m</a></li>
 <li>Andreas Kalpakides</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#x6d;&#x61;&#105;&#108;&#116;o&#58;&#109;&#106;&#x6c;&#97;g&#x61;t&#116;&#x75;&#x74;&#x61;&#x40;&#x67;&#109;&#97;&#x69;&#108;.c&#x6f;&#109;">&#109;&#106;&#x6c;&#97;g&#x61;t&#116;&#x75;&#x74;&#x61;&#x40;&#x67;&#109;&#97;&#x69;&#108;.c&#x6f;&#109;</a></li>
+<li>Michael LaGattuta <a href="&#x6d;a&#105;&#x6c;&#x74;&#111;&#58;&#x6d;&#x6a;&#x6c;&#97;&#x67;&#97;&#116;&#116;u&#116;&#97;&#x40;&#103;&#x6d;&#97;&#105;&#108;&#x2e;&#99;&#x6f;&#109;">&#x6d;&#x6a;&#x6c;&#97;&#x67;&#97;&#116;&#116;u&#116;&#97;&#x40;&#103;&#x6d;&#97;&#105;&#108;&#x2e;&#99;&#x6f;&#109;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1059,11 +1059,15 @@ later you can export to Componentized UFOs.</p>
 <li>Project Goals</li>
 <li>Duration</li>
 <li>Weights and Masters</li>
-<li>Scripts</li>
+<li>Scripts
+<ul>
+<li>Encoding NAM Files</li>
+</ul></li>
 <li>Glyphs</li>
 <li>Personnel Plan</li>
 </ul></li>
 </ul></li>
+<li><strong>ADV-0004-0002 Compare Current Encoding Support against NAM</strong> / Apil 09</li>
 </ul></li>
 </ul></li>
 <li><p>Completed:</p>
@@ -1156,7 +1160,7 @@ later you can export to Componentized UFOs.</p>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#109;&#97;&#x69;&#x6c;&#x74;&#x6f;&#58;&#x73;&#x75;&#112;&#x70;o&#114;&#x74;&#64;&#x76;&#x69;&#x76;a&#x72;a&#x64;&#x6f;&#46;&#99;&#x6f;&#x6d;">&#x73;&#x75;&#112;&#x70;o&#114;&#x74;&#64;&#x76;&#x69;&#x76;a&#x72;a&#x64;&#x6f;&#46;&#99;&#x6f;&#x6d;</a></li>
+<li><a href="&#109;&#x61;&#105;&#108;&#x74;&#111;&#58;&#x73;&#x75;&#x70;&#112;o&#x72;&#x74;&#x40;&#118;&#105;&#x76;a&#x72;&#97;&#x64;&#111;&#46;&#x63;&#111;&#x6d;">&#x73;&#x75;&#x70;&#112;o&#x72;&#x74;&#x40;&#118;&#105;&#x76;a&#x72;&#97;&#x64;&#111;&#46;&#x63;&#111;&#x6d;</a></li>
 </ul></li>
 </ul></li>
 </ul>
